--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200,900');
+
 
 * {
     margin: 0;
@@ -13,7 +14,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: url("./pixel-art_P7_720x448.gif");
+    background-image: url("../pixel-art_P7_720x448.gif");
     background-size: 100%;
     background-repeat: no-repeat;
 }
