--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200,900');
 
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Source Code", sans-serif;
+    font-family: 'VT323', monospace;
   }
 
 
@@ -13,45 +12,34 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
     background-image: url("../pixel-art_P7_720x448.gif");
     background-size: 100%;
     background-repeat: no-repeat;
 }
 
 .header-container {
-    margin: 25vh;
+    margin: 30vh;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: black;
     color: white;
-}
-
-header {
-    margin: 3vh;
-}
-
-.img-character {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
+    padding: 20px;
 }
 
 .character {
-    height: 300px;
+    margin-top: 70%;
+    height: 425px;
     width: 300px;
+    opacity: .9;
 }
 
 .header-container {
-    font-family: 'Waiting for the Sunrise', cursive; 
-    font-size:30px; 
+    font-size: 35px; 
     margin: 10px 50px; 
     letter-spacing: 6px; 
-    font-weight: bold;
+    opacity: .9;
   }
 
 
