--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,5 +1,17 @@
-
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200,900');
+a {
+  position: relative;
+  width: 180px;
+  height: 60px;
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 60px;
+  letter-spacing: 2px;
+  margin: 20px;
+  transition: 0.5s;
+}
+/* @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200,900');
 
 :root {
   --text-color: hsla(210, 50%, 85%, 1);
@@ -94,10 +106,10 @@ a .right:hover::after {
 
 a .left:hover ~ .right::after {
   transform: translate(0, -50%) rotate(7deg)
-}
+} */
 
 /* bubbles */
-a::before {
+/* a::before {
   content: '';
   pointer-events: none;
   opacity: .6;
@@ -124,3 +136,4 @@ a::before {
 }
 
 
+ */
