--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,4 +1,12 @@
-
+:root {
+    --color-red: #ec1840;
+    --color-white: #fff;
+    --color-black-1: #111;
+    --color-black-2: #222;
+    --color-black-3: #444;
+    --speed-normal: 0.5s;
+    --speed-fast: 0.8s;
+  }
 
 * {
     margin: 0;
@@ -8,13 +16,16 @@
   }
 
 
-body {
+  body {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    background-color: black;
-}
+    min-height: 100vh;
+    background: var(--color-black-1);
+    font-family: 'VT323', monospace;
+    font-size: 36px;
+  }
 
 .header-container {
     display: flex;
@@ -33,12 +44,35 @@ body {
     width: 300px;
 }
 
-button {
-    position: fixed;
-    display: block;
-    border-radius: 20px;
-    font-size: 28px;
-    color: black;
-    border: 2px solid black;
-}
+a {
+    padding: 35px;
+    position: relative;
+    width: 180px;
+    height: 60px;
+    margin: 20px;
+    line-height: 60px;
+    letter-spacing: 2px;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    color: var(--bl);
+    transition: var(--speed-normal);
+    border: 1px solid var(--color-red);
+  }
+  
+  a:hover {
+    border: 1px solid transparent;
+    background: var(--color-red) url(../pixel.png);
+    transition-delay: 0.8s;
+    animation: animate var(--speed-fast) steps(8) forwards;
+  }
+  
+  @keyframes animate {
+    0% {
+      background-position-y: 0;
+    }
+    100% {
+      background-position-y: -480px;
+    }
+  }
 
