geisha character css refined for animation

--- a/styles/intro.css
+++ b/styles/intro.css
@@ -38,9 +38,15 @@
 }
 
 .character {
-    margin-top: 2%;
-    height: 450px;
-    width: 300px;
+  width: 150px;
+  height: 150px;
+  box-sizing: border-box;
+  border: 5px white solid;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+  transform: translatey(0px);
+  animation: float 6s ease-in-out infinite;
 }
 
 button, a {
