--- a/styles/intro.css
+++ b/styles/intro.css
@@ -38,28 +38,29 @@
 }
 
 .character {
-  width: 150px;
-  height: 150px;
+  width: 250px;
+  height: 375px;
   box-sizing: border-box;
-  border: 5px white solid;
-  border-radius: 50%;
+  border-radius: 50% 20% / 10% 40%;
+  border: 1px var(--color-white) solid;
   overflow: hidden;
-  box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+  background-color: var(--color-black-2);
+  box-shadow: 0 5px 15px 0px var(--color-white);
   transform: translatey(0px);
-  animation: float 6s ease-in-out infinite;
+  animation: float 3s ease-in-out infinite;
 }
 
 @keyframes float {
   0% {
-    box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+    box-shadow: 0 5px 15px 0px var(--color-black-2);
     transform: translatey(0px);
   }
   50% {
-    box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
+    box-shadow: 0 25px 15px 0px var(--color-black-3);
     transform: translatey(-20px);
   }
   100% {
-    box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+    box-shadow: 0 5px 15px 0px var(--color-black-2);
     transform: translatey(0px);
   }
 }
