--- a/styles/intro.css
+++ b/styles/intro.css
@@ -26,18 +26,17 @@
   }
 
 .header-container {
+    display: flex;
+    justify-content: center;
     background-color: var(--color-black-1);
     color: var(--color-white);
-    font-size: 35px; 
-    margin-top: 0px; 
-    margin-bottom: 10px;
-    margin-left: 25px;
-    margin-right: 25px;
     letter-spacing: 6px; 
     height: 5vh;
+    margin: 5px 35px 35px 5px;
 }
 
 .character {
+  margin-bottom: 25%;
   width: 250px;
   height: 375px;
   box-sizing: border-box;
@@ -68,8 +67,9 @@
 button, a {
     width: 180px;
     height: 60px;
-    margin: 50px;
+    margin-top: 50px;
     line-height: 60px;
+    border-radius: 30px;
     letter-spacing: 2px;
     text-decoration: none;
     text-transform: uppercase;
