--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,7 +1,7 @@
 
 
 :root {
-  --color-red: #E53B44;
+  --color-red: #A32635;
   --color-white: #fff;
   --color-black-1: #111;
   --color-black-2: #222;
