--- a/styles/game.css
+++ b/styles/game.css
@@ -6,3 +6,9 @@ body {
     min-width: 100%;
     min-height: 100%;
 }
+
+img {
+    max-width: 200px;
+    max-height: 300px;
+    transform: rotate(-90deg);
+}
