--- a/styles/game.css
+++ b/styles/game.css
@@ -11,4 +11,9 @@ img {
     max-width: 200px;
     max-height: 300px;
     transform: rotate(-90deg);
+    -webkit-animation: swim 1.5s steps(15) infinite;
+    -moz-animation: swim 1.5s steps(15) infinite;
+     -ms-animation: swim 1.5s steps(15) infinite;
+      -o-animation: swim 1.5s steps(15) infinite;
+         animation: swim 1.5s steps(15) infinite;
 }
