--- a/styles/game.css
+++ b/styles/game.css
@@ -1,3 +1,4 @@
+
 body {
     background-image: url(../pixel-art_P7_720x448.gif);
     background-size: cover;
@@ -11,9 +12,17 @@ img {
     max-width: 200px;
     max-height: 300px;
     transform: rotate(-90deg);
-    -webkit-animation: swim 1.5s steps(15) infinite;
-    -moz-animation: swim 1.5s steps(15) infinite;
-     -ms-animation: swim 1.5s steps(15) infinite;
-      -o-animation: swim 1.5s steps(15) infinite;
-         animation: swim 1.5s steps(15) infinite;
+    animation: swim 3s ease-in-out infinite;
+}
+
+@keyframes swim {
+    0% {
+      transform: translatey(-180px);
+    }
+    50% {
+      transform: translatey(-20px);
+    }
+    100% {
+      transform: translatey(0px);
+    }
 }
